--- a/index.html
+++ b/index.html
@@ -81,6 +81,28 @@
             </div>
 
             <h3 class="date">23 December, Sunday</h3>
+
+            <div class="calendar">
+              <ul class="calendar-days">
+                <li class="days">Sun</li>
+                <li class="days mon">Mon</li>
+                <li class="days">Tue</li>
+                <li class="days">Wed</li>
+                <li class="days">Thu</li>
+                <li class="days">Fri</li>
+                <li class="days">Sat</li>
+              </ul>
+
+              <ul class="calendar-days">
+                <li id="blue-circle" class="days-num">23</li>
+                <li class="days-num mon">24</li>
+                <li class="days-num">25</li>
+                <li class="days-num">26</li>
+                <li class="days-num">27</li>
+                <li class="days-num">28</li>
+                <li class="days-num">29</li>
+              </ul>
+            </div>
             
           </div>
           
