responsiveness of page is done

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <i id="bell" class="far fa-bell notification"></i>
         </form>
 
-        <div class="side-by-side">
+        <div class="side-by-side flex-horizontal-on-page-size">
           <div class="completed-tasks boxes">
             <div class="tasks-completed-count-line">
               <p class="tasks-completed-count">8 task completed out of 10</p>
